// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Component Default Snapshot - 1 tem, no navigation 1`] = `
"<div style=\\"max-width:1280px\\">
  <div class=\\"slds-carousel\\" id=\\"ExampleCarouselWithundefineditems\\">
    <div class=\\"slds-grid_vertical slds-col slds-path__scroller\\">
      <div class=\\"slds-grid slds-grid_align-center\\">
        <div class=\\"slds-carousel__stage slds-align_absolute-center\\">
          <div class=\\"slds-carousel__panels slds-is-relative\\" style=\\"transform:translateX(-1000000px)\\">
            <div id=\\"content-id-1\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-1\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-01.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 1</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #1</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-2\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-2\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 2</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #2 will be much longer than others. It&#x27;ll look ok</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-3\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-3\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-03.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 3</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #3</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-4\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-4\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 4</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #4</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-5\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-5\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-01.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 5</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #3</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Learn More</a></div>
              </a>
            </div>
            <div id=\\"content-id-6\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-6\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-03.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 6</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #6</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Learn More</a></div>
              </a>
            </div>
            <div id=\\"content-id-7\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-7\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 7</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #6</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Learn More</a></div>
              </a>
            </div>
          </div>
        </div>
      </div>
      <ul class=\\"slds-carousel__indicators slds-col slds-text-align_center\\" role=\\"tablist\\">
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\" role=\\"presentation\\"><a id=\\"indicator-id-1\\" class=\\"slds-carousel__indicator-action slds-is-active\\" role=\\"tab\\" tabindex=\\"0\\" aria-selected=\\"true\\" aria-controls=\\"panel-1\\" title=\\"Visit Panel 1\\"><span class=\\"slds-assistive-text\\">Panel 1</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-2\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-2\\" title=\\"Visit Panel 2\\"><span class=\\"slds-assistive-text\\">Panel 2</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-3\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-3\\" title=\\"Visit Panel 3\\"><span class=\\"slds-assistive-text\\">Panel 3</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-4\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-4\\" title=\\"Visit Panel 4\\"><span class=\\"slds-assistive-text\\">Panel 4</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-5\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-5\\" title=\\"Visit Panel 5\\"><span class=\\"slds-assistive-text\\">Panel 5</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-6\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-6\\" title=\\"Visit Panel 6\\"><span class=\\"slds-assistive-text\\">Panel 6</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-7\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-7\\" title=\\"Visit Panel 7\\"><span class=\\"slds-assistive-text\\">Panel 7</span></a></li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Carousel Component Default Snapshot - 3 items and navigation 1`] = `
"<div style=\\"max-width:1280px\\">
  <div class=\\"slds-carousel\\" id=\\"ExampleCarouselWith3items\\">
    <div class=\\"slds-grid_vertical slds-col slds-path__scroller\\">
      <div class=\\"slds-grid slds-grid_align-center\\">
        <div class=\\"slds-carousel__stage slds-align_absolute-center\\">
          <div class=\\"slds-carousel__panels slds-is-relative\\" style=\\"transform:translateX(-1000000px)\\">
            <div id=\\"content-id-1\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-1\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-01.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 1</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #1</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-2\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-2\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 2</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #2 will be much longer than others. It&#x27;ll look ok</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-3\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-3\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-03.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 3</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #3</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-4\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-4\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 4</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #4</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Get Started</a></div>
              </a>
            </div>
            <div id=\\"content-id-5\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-5\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-01.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 5</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #3</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Learn More</a></div>
              </a>
            </div>
            <div id=\\"content-id-6\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-6\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-03.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 6</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #6</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Learn More</a></div>
              </a>
            </div>
            <div id=\\"content-id-7\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-7\\" style=\\"max-width:NaNpx\\">
              <a href=\\"javascript:void(0);\\" class=\\"slds-carousel__panel-action slds-text-link_reset\\">
                <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
                <div class=\\"slds-carousel__content\\">
                  <h2 class=\\"slds-carousel__content-title\\">Carousel Item 7</h2>
                  <p class=\\"slds-p-bottom_x-small slds-text-body_small\\" style=\\"min-height:40px\\">Description for #6</p><a class=\\"slds-button slds-button_neutral slds-button_outline-brand\\" href=\\"https://www.salesforce.com\\" target=\\"_blank\\">Learn More</a></div>
              </a>
            </div>
          </div>
        </div>
      </div>
      <ul class=\\"slds-carousel__indicators slds-col slds-text-align_center\\" role=\\"tablist\\">
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\" role=\\"presentation\\"><a id=\\"indicator-id-1\\" class=\\"slds-carousel__indicator-action slds-is-active\\" role=\\"tab\\" tabindex=\\"0\\" aria-selected=\\"true\\" aria-controls=\\"panel-1\\" title=\\"Visit Panel 1\\"><span class=\\"slds-assistive-text\\">Panel 1</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-2\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-2\\" title=\\"Visit Panel 2\\"><span class=\\"slds-assistive-text\\">Panel 2</span></a></li>
        <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
          role=\\"presentation\\"><a id=\\"indicator-id-3\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-3\\" title=\\"Visit Panel 3\\"><span class=\\"slds-assistive-text\\">Panel 3</span></a></li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Carousel Component With Custom Rendering 1`] = `
"<div class=\\"slds-carousel\\" id=\\"Custom Rendering\\">
  <div class=\\"slds-grid_vertical slds-col slds-path__scroller\\">
    <div class=\\"slds-grid slds-grid_align-center\\">
      <div class=\\"slds-carousel__stage slds-align_absolute-center\\">
        <div class=\\"slds-carousel__panels slds-is-relative\\" style=\\"transform:translateX(-1000000px)\\">
          <div id=\\"content-id-1\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-1\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 1 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-01.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
          <div id=\\"content-id-2\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-2\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 2 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
          <div id=\\"content-id-3\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-3\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 3 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-03.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
          <div id=\\"content-id-4\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-4\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 4 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
          <div id=\\"content-id-5\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-5\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 5 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-01.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
          <div id=\\"content-id-6\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-6\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 6 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-03.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
          <div id=\\"content-id-7\\" class=\\"slds-carousel__panel slds-m-horizontal_xx-small slds-list_horizontal\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"indicator-id-7\\" style=\\"max-width:NaNpx\\">
            <div class=\\"slds-carousel-custom-rendering\\">
              <div class=\\"slds-carousel__content-title\\">Carousel Item 7 With Custom Rendering</div>
              <div class=\\"slds-carousel__image\\"><img src=\\"assets/images/carousel/carousel-02.jpg\\" alt=\\"Card image description\\" /></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul class=\\"slds-carousel__indicators slds-col slds-text-align_center\\" role=\\"tablist\\">
      <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\" role=\\"presentation\\"><a id=\\"indicator-id-1\\" class=\\"slds-carousel__indicator-action slds-is-active\\" role=\\"tab\\" tabindex=\\"0\\" aria-selected=\\"true\\" aria-controls=\\"panel-1\\" title=\\"Visit Panel 1\\"><span class=\\"slds-assistive-text\\">Panel 1</span></a></li>
      <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
        role=\\"presentation\\"><a id=\\"indicator-id-2\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-2\\" title=\\"Visit Panel 2\\"><span class=\\"slds-assistive-text\\">Panel 2</span></a></li>
      <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
        role=\\"presentation\\"><a id=\\"indicator-id-3\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-3\\" title=\\"Visit Panel 3\\"><span class=\\"slds-assistive-text\\">Panel 3</span></a></li>
      <li class=\\"slds-carousel__indicator slds-m-horizontal_xx-small\\"
        role=\\"presentation\\"><a id=\\"indicator-id-4\\" class=\\"slds-carousel__indicator-action\\" role=\\"tab\\" tabindex=\\"-1\\" aria-selected=\\"false\\" aria-controls=\\"panel-4\\" title=\\"Visit Panel 4\\"><span class=\\"slds-assistive-text\\">Panel 4</span></a></li>
    </ul>
  </div>
</div>"
`;
